# jobfit

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260613_0002_optimization_embeddings.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py
backend/app/ai/clients/: __init__.py
backend/app/ai/embeddings/: __init__.py  base.py  deterministic.py  factory.py  indexing.py  local.py  semantic.py
backend/app/ai/guardrails/: __init__.py
backend/app/ai/matching/: __init__.py  normalization.py
backend/app/ai/pipeline/: __init__.py  matching.py  optimization.py
backend/app/ai/prompts/: job_parser.v1.md  json_repair.v1.md  match_explainer.v1.md  resume_optimizer.v1.md  resume_parser.v1.md  truth_guard.v1.md
backend/app/ai/scoring/: __init__.py  match_engine.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: health.py  jobs.py  match_reports.py  optimizations.py  resumes.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  embedding.py  optimization.py
backend/app/db/repositories/: __init__.py  ai_run_repository.py  job_repository.py  match_report_repository.py  optimization_repository.py  resume_repository.py
backend/app/evals/: metrics.py  runner.py  semantic.py
backend/app/evals/reports/: eval_report_v1.md
backend/app/schemas/: __init__.py  job.py  match_report.py  optimization.py  parsing.py  resume.py
(+24 files in other folders)
