[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[project]
name = "jobfit-ai-backend"
version = "0.1.0"
description = "FastAPI backend and AI/ML pipeline for JobFit AI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.1",
  "pgvector>=0.3.2",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.0",
  "mypy>=1.11.0"
]
local-ml = [
  "sentence-transformers>=3.0.1"
]
docs = [
  "mkdocs>=1.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
